<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.nothingsoft.nicolassaad.garagehunter.HelpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@color/accent_color"
        android:minHeight="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/how_to_post_your_own_sale"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginStart="@dimen/fifteen"
                android:layout_marginTop="@dimen/five"
                android:text="@string/help_post_sale_text"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fifteen"
                android:textStyle="bold"
                android:text="@string/how_to_search_for_sales"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fifteen"
                android:layout_marginStart="@dimen/fifteen"
                android:layout_marginTop="@dimen/five"
                android:text="@string/how_to_search_for_sales_text"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>


