<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".SaleActivity"
    tools:showIn="@layout/activity_sale">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/sale_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginLeft="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginStart="@dimen/ten"
            android:layout_marginTop="@dimen/five"
            android:gravity="start"
            android:hint="@string/description"
            android:textSize="@dimen/sixteen" />


            <TextView
                android:id="@+id/address_prompt_text"
                android:layout_below="@id/sale_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fifteen"
                android:layout_marginEnd="@dimen/five"
                android:layout_marginRight="@dimen/five"
                android:layout_marginTop="@dimen/fifteen"
                android:text="@string/address_colon"
                android:textSize="@dimen/eighteen"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sale_address_text"
                android:layout_below="@id/sale_desc"
                android:layout_toEndOf="@id/address_prompt_text"
                android:layout_toRightOf="@id/address_prompt_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fifteen"
                android:layout_marginTop="@dimen/fifteen"
                android:text="@string/address"
                android:textSize="@dimen/sixteen" />

            <TextView
                android:id="@+id/day_prompt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/five"
                android:layout_marginRight="@dimen/five"
                android:layout_marginTop="@dimen/five"
                android:text="@string/day_colon"
                android:textSize="@dimen/eighteen"
                android:textStyle="bold"
                android:layout_below="@id/address_prompt_text"/>

            <TextView
                android:id="@+id/sale_DOW"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fifteen"
                android:layout_marginTop="@dimen/five"
                android:gravity="start"
                android:text="@string/day_of_week"
                android:textSize="@dimen/sixteen"
                android:layout_below="@id/address_prompt_text"
                android:layout_toRightOf="@id/day_prompt_text"
                android:layout_toEndOf="@id/day_prompt_text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start|bottom">

                <Button
                    android:id="@+id/sale_back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/accent_color"
                    android:clickable="true"
                    android:paddingBottom="@dimen/ten"
                    android:paddingLeft="@dimen/ten"
                    android:paddingRight="@dimen/ten"
                    android:paddingTop="@dimen/ten"
                    android:text="@string/go_back"
                    android:textAllCaps="false" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>



