<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.example.nicolassaad.garagehunter.PostFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/post_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_description"
            android:lines="4"
            android:maxHeight="200dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/post_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_address"
            android:maxLines="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- Search by Day -->
        <Spinner
            android:id="@+id/post_spinner"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:entries="@array/spinnerItems"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end">

            <Button
                android:id="@+id/add_pic_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/accent_color"
                android:text="@string/add_pictures"
                android:textAllCaps="false" />

        </RelativeLayout>

    </LinearLayout>
    <!-- THIS IS WHERE WE ADD PICTURES -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/post_image_holder1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_holder"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:id="@+id/post_image_holder2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_holder"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:id="@+id/post_image_holder3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_holder" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <!--<Button-->
            <!--android:id="@+id/post_back_button"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentLeft="true"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:background="@color/accent_color"-->
            <!--android:clickable="true"-->
            <!--android:paddingBottom="10dp"-->
            <!--android:paddingLeft="10dp"-->
            <!--android:paddingRight="10dp"-->
            <!--android:paddingTop="10dp"-->
            <!--android:text="@string/go_back"-->
            <!--android:textAllCaps="false" />-->

            <Button
                android:id="@+id/preview_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/accent_color"
                android:clickable="true"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/preview_post"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/accent_color"
                android:clickable="true"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:text="@string/post"
                android:textAllCaps="false" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
