<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nicolassaad.garagehunter.PreviewActivity"
    tools:showIn="@layout/activity_preview">

    <!-- will be replaced with recycler view-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/five">

        <ImageView
            android:id="@+id/preview_image_holder1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_holder"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:id="@+id/preview_image_holder2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_holder"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:id="@+id/preview_image_holder3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/image_holder" />

    </LinearLayout>

    <TextView
        android:id="@+id/preview_desc_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fifteen"
        android:layout_marginEnd="@dimen/thirty"
        android:layout_marginLeft="@dimen/thirty"
        android:layout_marginRight="@dimen/thirty"
        android:layout_marginStart="@dimen/thirty"
        android:layout_marginTop="@dimen/ten"
        android:gravity="start"
        android:hint="@string/description"
        android:textStyle="italic"
        android:textSize="@dimen/eighteen" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:layout_marginTop="@dimen/fifteen"
            android:gravity="center_horizontal"
            android:text="@string/address_colon"
            android:textStyle="bold"
            android:textSize="@dimen/eighteen" />

        <TextView
            android:id="@+id/preview_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fifteen"
            android:layout_marginTop="@dimen/fifteen"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:hint="@string/no_address"
            android:textSize="@dimen/eighteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/ten"
            android:layout_marginRight="@dimen/ten"
            android:text="@string/day_colon"
            android:textStyle="bold"
            android:textSize="@dimen/eighteen" />

        <TextView
            android:id="@+id/preview_DOW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/fifteen"
            android:gravity="start"
            android:textSize="@dimen/eighteen" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|bottom">

            <Button
                android:id="@+id/preview_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/accent_color"
                android:clickable="true"

                android:paddingBottom="@dimen/ten"
                android:paddingLeft="@dimen/ten"
                android:paddingRight="@dimen/ten"
                android:paddingTop="@dimen/ten"
                android:text="@string/go_back"
                android:textAllCaps="false" />

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
