<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- This layout will be hidden when hide search is tapped-->
    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/fifteen"
            android:paddingRight="@dimen/fifteen">
            <!-- This search will use Google Maps to find areas
            for the user -->
            <EditText
                android:id="@+id/search_loc_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_by_location"
                android:maxLines="1"
                android:singleLine="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/ten"
            android:paddingRight="@dimen/ten">

            <Spinner
                android:id="@+id/search_by_day"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:entries="@array/spinnerItems" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/skinny_button_height35"
                android:layout_marginEnd="@dimen/ten"
                android:layout_marginRight="@dimen/ten"
                android:layout_toLeftOf="@id/search_button"
                android:layout_toStartOf="@id/search_button"
                android:background="@color/accent_color"
                android:text="@string/clear" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/skinny_button_height35"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@color/accent_color"
                android:text="@string/search" />


        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Hide Search Button text needs to change to Show Search
        when search criteria is hidden -->
        <Button
            android:id="@+id/hide_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            android:layout_marginTop="-5dp"
            android:background="@drawable/search_show_hide"
            android:elevation="10dp"
            android:gravity="bottom"
            android:paddingBottom="10dp"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/hide_search" />

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Fragments.MapsFragment" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/fab_margin"
            android:background="@android:color/transparent"
            android:scaleType="center"
            android:src="@drawable/getuserlocbutt" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>

